--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -15,6 +15,56 @@
     </properties>
     
     <dependencies>
+
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-beans</artifactId>
+	        <version>5.0.6.RELEASE</version>
+	    </dependency>
+	
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-web</artifactId>
+	        <version>5.0.6.RELEASE</version>
+	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-webmvc</artifactId>
+	        <version>5.0.6.RELEASE</version>
+	    </dependency>
+	
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-core</artifactId>
+	        <version>5.0.6.RELEASE</version>
+	    </dependency>
+	
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>5.0.6.RELEASE</version>
+	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+	    <dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-validator</artifactId>
+	        <version>6.0.10.Final</version>
+	    </dependency>
+	    
+		<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+		<dependency>
+		    <groupId>com.mchange</groupId>
+		    <artifactId>c3p0</artifactId>
+		    <version>0.9.5.2</version>
+		</dependency>
+	    
     
 	    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	    <dependency>
