--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -15,6 +15,13 @@
     </properties>
     
     <dependencies>
+    
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-orm</artifactId>
+		    <version>5.0.6.RELEASE</version>
+		</dependency>
 
 	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
 	    <dependency>
@@ -50,12 +57,19 @@
 	        <artifactId>spring-context</artifactId>
 	        <version>5.0.6.RELEASE</version>
 	    </dependency>
+
+	    <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		    <version>5.0.6.RELEASE</version>
+		</dependency>
 	    
-	    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+	    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	    <dependency>
 	        <groupId>org.hibernate</groupId>
-	        <artifactId>hibernate-validator</artifactId>
-	        <version>6.0.10.Final</version>
+	        <artifactId>hibernate-core</artifactId>
+	        <version>5.3.0.Final</version>
 	    </dependency>
 	    
 		<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
@@ -86,8 +100,9 @@
 	        <groupId>jstl</groupId>
 	        <artifactId>jstl</artifactId>
 	        <version>1.2</version>
+	    
 	    </dependency>
-	
+	    
     </dependencies>
     <build>
         <finalName>web-customer-tracker</finalName>
